--- a/dashboard/pages/tables.html
+++ b/dashboard/pages/tables.html
@@ -376,7 +376,7 @@
                       <th class="text-secondary opacity-7"></th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody id="authorsTBody">
                     <tr>
                       <td>
                         <div class="d-flex px-2 py-1">
@@ -894,6 +894,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../assets/js/soft-ui-dashboard.min.js?v=1.0.5"></script>
+  <script src="../assets/js/author.js"></script>
   <script src="../assets/js/cursoIntegon.js"></script>
 </body>
 
