--- a/dashboard/pages/sign-in.html
+++ b/dashboard/pages/sign-in.html
@@ -110,7 +110,7 @@
                   <form role="form">
                     <label>Email</label>
                     <div class="mb-3">
-                      <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon" id="Email">
+                      <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon" id="Email" required>
                     </div>
                     <label>Password</label>
                     <div class="mb-3">
@@ -197,8 +197,9 @@
     </div>
   </footer>
   <!-- -------- END FOOTER 3 w/ COMPANY DESCRIPTION WITH LINKS & SOCIAL ICONS & COPYRIGHT ------- -->
+  <!-- <script src="../assets/js/sign-in.js"></script> -->
+  <script src="../assets/js/signinfetch.js"></script>
   <!--   Core JS Files   -->
-  <script src="../assets/js/sign-in.js"></script>
   <script src="../assets/js/core/popper.min.js"></script>
   <script src="../assets/js/core/bootstrap.min.js"></script>
   <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
