--- a/dashboard/pages/tables.html
+++ b/dashboard/pages/tables.html
@@ -392,7 +392,11 @@
                     </div>
                     <div class="form-group">
                       <label for="status" class="form-label">status</label>
-                      <input type="text" class="form-control" name="status" id="status">
+                      <select name="status" id="status" class="form-select">
+                        <option value="Online">Online</option>
+                        <option value="Offline">Offline</option>
+                      </select>
+                      <!-- <input type="text" class="form-control" name="status" id="status"> -->
                     </div>
                   </div>
                   <div class="ms-2">
