--- a/JS/dashboard/pages/tables.html
+++ b/JS/dashboard/pages/tables.html
@@ -369,7 +369,7 @@
                 </div>
                 <div class="justify-content-end" id="filters">
                   <button type="button" class="btn btn-sm mb-0 me-3 btn-outline-primary" id="Clear">Clear</button>
-                  <button type="button" class="btn btn-outline-secondary btn-sm mb-0 me-3" id="Programator">Programator</button>
+                  <button type="button" class="btn btn-outline-secondary btn-sm mb-0 me-3" id="Developer">Developer</button>
                   <button type="button" class="btn btn-outline-secondary btn-sm mb-0 me-3" id="Manager">Manager</button>
                 </div>
               </div>
@@ -956,10 +956,10 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../assets/js/soft-ui-dashboard.min.js?v=1.0.5"></script>
-  <!-- <script src="../assets/js/author.js"></script>
-  <script src="../assets/js/cursoIntegon.js"></script>
-  <script src="../assets/js/authorsJQuery.js"></script> -->
   <script src="../assets/js/filterjquery.js"></script>
+  <script src="../assets/js/author.js"></script>
+  <script src="../assets/js/cursoIntegon.js"></script>
+  <script src="../assets/js/authorsJQuery.js"></script>
 </body>
 
 </html>
