--- a/Angular/app-dentistas/src/index.html
+++ b/Angular/app-dentistas/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <h3>Antes de llamar al componente raiz</h3>
+  <app-quinto></app-quinto>
   <app-root></app-root>
+  <h3>Despues de llamar al componente raiz</h3>
 </body>
 </html>
